[tool.poetry]
name = "django_project"
version = "0.1.0"
description = ""
authors = ["AleksandrZaec <zaecam95@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
crispy-bootstrap5 = "^2023.10"
pillow = "^10.1.0"
django-extensions = "^3.2.3"
ipython = "^8.18.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
